@@ -4,6 +4,9 @@ Changelog
 4.0.3 - unreleased
 ------------------
 
+- Fix the tests to work with GenericSetup 1.6.3+.
+  [hannosch]
+
 - Explicitly load the CMF permissions before using them in a `configure.zcml`.
   [hannosch]
 
